# DIAGHO

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
src/event_planner/: cli.py  event.py  event_manager.py
tests/: test_cli.py  test_event.py  test_event_manager.py
