[tool.poetry]
name = "event-planner"
version = "0.1.0"
description = ""
authors = ["yvvgen <kerkeni.nessim@gmail.com>"]
packages = [
    { include = "event_planner", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.7.4"

[tool.poetry.scripts]
event-planner = "event_planner.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"